# nxbx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
resources/: nxbx.desktop
src/: clock.cpp  clock.hpp  console.hpp  files.cpp  files.hpp  init.cpp  init.hpp  io.cpp  io.hpp  isettings.hpp  kernel.cpp  kernel.hpp  logger.cpp  logger.hpp  main.cpp  nxbx.cpp  nxbx.hpp  paths.hpp  pe.hpp  settings.cpp  settings.hpp  util.cpp  util.hpp  xbe.cpp  xbe.hpp  xiso.cpp  xiso.hpp  xpartition.cpp  xpartition.hpp
src/common/: clock.hpp  files.cpp  host.cpp  host.hpp  isettings.hpp  logger.hpp  settings.cpp  settings.hpp  spsc-queue.hpp  util.cpp  util.hpp
src/fs/: fatx.cpp  fatx.hpp  xdvdfs.cpp  xdvdfs.hpp
src/hw/: adm.cpp  adm.hpp  adm1032.cpp  adm1032.hpp  cmos.cpp  cmos.hpp  cpu.cpp  cpu.hpp  eeprom.cpp  eeprom.hpp  machine.hpp  pci.cpp  pci.hpp  pic.cpp  pic.hpp  pit.cpp  pit.hpp  smbus.cpp  smbus.hpp  smc.cpp  smc.hpp
src/hw/usb/: ohci.cpp  ohci.hpp  ohci_reg_defs.hpp
src/hw/video/: conexant.cpp  conexant.hpp  vga.cpp  vga.hpp
src/hw/video/gpu/: nv2a.cpp  nv2a.hpp  nv2a_defs.hpp  pbus.cpp  pbus.hpp  pbus_pci.cpp  pbus_pci.hpp  pcrtc.cpp  pcrtc.hpp  pfb.cpp  pfb.hpp  pfifo.cpp  pfifo.hpp  pgraph.cpp  pgraph.hpp  pmc.cpp  pmc.hpp  pramdac.cpp  pramdac.hpp  pramin.cpp  pramin.hpp  ptimer.cpp  ptimer.hpp  puser.cpp  puser.hpp  pvga.cpp  pvga.hpp  pvideo.cpp  pvideo.hpp  user.cpp  user.hpp
src/nxbx/: console.cpp  console.hpp  io.cpp  io.hpp  kernel.cpp  kernel.hpp  kernel_head_ref.hpp  kernel_head_ref.hpp.in  paths.cpp  paths.hpp  urls.hpp
src/nxbx/fs/: fatx.cpp  fatx.hpp  xdvdfs.cpp
src/nxbx/hw/: adm1032.cpp  adm1032.hpp  cmos.cpp  cmos.hpp  cpu.cpp  cpu.hpp  eeprom.cpp  eeprom.hpp  machine.cpp  machine.hpp  pci.cpp  pci.hpp  pic.cpp  pic.hpp  pit.cpp  pit.hpp  smbus.cpp  smbus.hpp  smbus_virt.hpp  smc.cpp  smc.hpp
src/nxbx/hw/usb/: ohci.cpp  ohci.hpp  ohci_reg_defs.hpp
src/nxbx/hw/video/: conexant.cpp  conexant.hpp  vga.cpp  vga.hpp
src/nxbx/hw/video/gpu/: nv2a.cpp  nv2a.hpp  nv2a_classes.hpp  nv2a_defs.hpp  pbus.cpp  pbus.hpp  pcrtc.cpp  pcrtc.hpp  pfb.cpp  pfb.hpp  pfifo.cpp  pfifo.hpp  pgraph.cpp  pgraph.hpp  pmc.cpp  pmc.hpp  pramdac.cpp  pramdac.hpp  pramin.cpp  pramin.hpp  ptimer.cpp  ptimer.hpp  puser.cpp  puser.hpp  pvga.cpp  pvga.hpp  pvideo.cpp  pvideo.hpp
src/qt/: main.cpp  main_window.cpp  main_window.hpp  main_window.ui  qthost.cpp  qthost.hpp  themes.cpp
